# contrib-space

./: .gitignore  ChangeLog  Makefile.in  Makefile.mak  README  README.md  TODO  clearways.nt  config.h.in  configure.ac  configure.in  dbpedia.pl  demo_geonames.nt  demo_geonames.rdf  demo_space.pl  freebase.pl  georss.pl  gml.pl  kml.pl  make.cmd  notes  rdf_http_loader.pl  space.doc  space.nsi  space.pl  space_web_loader.pl  spacetimeindex.pl  test_space.pl  timeindex.pl  web_loader.pl  wgs84.pl  wkt.pl
adaptations/: README
src/: Index.cc  Index.h  Makefile.in  Search.cc  Search.h  Shapes.cc  Shapes.h  debug.cc  globals.h  lock.cc  lock.h  space.cc
